tests/enums/enums.exp
Error ---------------------------------------------------------------------------------------------- enum-object.js:16:2

Cannot cast `F` to `EO` because enum `F` [1] is incompatible with enum `E` [2].

   enum-object.js:16:2
   16| (F: EO); // Error: types are incompatible
        ^

References:
   enum-object.js:8:1
       v-------
    8| enum F {
    9|   A,
   10|   B,
   11| }
       ^ [1]
   enum-object.js:16:5
   16| (F: EO); // Error: types are incompatible
           ^^ [2]


Error ---------------------------------------------------------------------------------------------- enum-object.js:19:1

Cannot reference type `EO` [1] from a value position.

   enum-object.js:19:1
   19| EO.A;
       ^^

References:
   enum-object.js:14:6
   14| type EO = typeof E;
            ^^ [1]


Error ---------------------------------------------------------------------------------------------- error-access.js:9:1

Cannot get `E.C` because property `C` is missing in enum `E` [1].

   error-access.js:9:1
   9| E.C;
      ^^^

References:
   error-access.js:3:1
      v-------
   3| enum E {
   4|   A,
   5|   B,
   6| }
      ^ [1]


Error ------------------------------------------------------------------------------------------- error-coercion.js:9:19

Cannot assign `E.A` to `a` because `E` [1] is incompatible with string [2].

   error-coercion.js:9:19
   9| const a: string = E.A;
                        ^^^

References:
   error-coercion.js:3:1
      v-------
   3| enum E {
   4|   A,
   5|   B,
   6| }
      ^ [1]
   error-coercion.js:9:10
   9| const a: string = E.A;
               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ error-coercion.js:12:14

Cannot assign `'B'` to `b` because string [1] is incompatible with `E` [2].

   error-coercion.js:12:14
   12| const b: E = 'B';
                    ^^^ [1]

References:
   error-coercion.js:12:10
   12| const b: E = 'B';
                ^ [2]


Error -------------------------------------------------------------------------------------------- error-reassign.js:4:1

Cannot reassign enum `E` [1].

   error-reassign.js:4:1
   4| E = 0;
      ^

References:
   error-reassign.js:3:6
   3| enum E {}
           ^ [1]



Found 6 errors
